--- a/package.json
+++ b/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/bootstrap": "^5.1.4",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.21",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
+    "bootstrap": "^5.1.1",
     "dotenv": "^10.0.0",
     "fabric": "^4.6.0",
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
