--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/bootstrap": "^5.1.4",
+    "@types/fabric": "^4.5.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.21",
     "@types/react": "^17.0.19",
